# Auralis_DAW

./: .gitignore  CLAUDE.md  README.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
.claude/: settings.local.json  test-baseline-17.json  test-baseline-18.json
docs/sprints/: DEFERRED.md  registry.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/presets/drum_machine/: acoustic_kit.mapreset  electronic_kit.mapreset
src-tauri/resources/presets/eq/: low_cut_100hz.mapreset  mastering_curve.mapreset  presence_boost.mapreset
src-tauri/resources/presets/synth/: bass_sub.mapreset  keys_electric.mapreset  lead_bright.mapreset  pad_warm.mapreset  pluck_short.mapreset
src-tauri/src/: lib.rs  main.rs
src-tauri/src/audio/: clip_player.rs  commands.rs  devices.rs  effect_chain.rs  engine.rs  fade.rs  fade_commands.rs  freeze.rs  freeze_commands.rs  graph.rs  loop_recorder.rs  metronome.rs  mod.rs  punch.rs  punch_commands.rs  recorder.rs  scheduler.rs  scheduler_commands.rs  take_commands.rs  take_lane.rs  tempo_commands.rs  tempo_map.rs  transport.rs  types.rs
src-tauri/src/audio/export/: commands.rs  file_writer.rs  mod.rs  render_session.rs  stem_splitter.rs
src-tauri/src/audio/mixer/: bus.rs  channel.rs  commands.rs  group_bus.rs  group_bus_commands.rs  master.rs  mixer.rs  mod.rs  routing.rs  sidechain.rs  sidechain_commands.rs
src-tauri/src/audio_editing/: commands.rs  mod.rs  peak_cache.rs  processed_cache.rs  stretch_commands.rs  time_stretch.rs  waveform_editor.rs
src-tauri/src/auth/: commands.rs  db.rs  mod.rs  models.rs
src-tauri/src/automation/: commands.rs  engine.rs  lane.rs  mod.rs  record.rs
src-tauri/src/browser/: mod.rs  preview.rs
src-tauri/src/config/: commands.rs  mod.rs
src-tauri/src/effects/: delay.rs  dynamics.rs  mod.rs  reverb.rs  sidechain.rs
src-tauri/src/effects/eq/: biquad.rs  mod.rs
src-tauri/src/instruments/: commands.rs  mod.rs  piano_roll_commands.rs
src-tauri/src/instruments/drum_machine/: clock.rs  mod.rs  pad.rs  pattern.rs
src-tauri/src/instruments/sampler/: decoder.rs  mod.rs  voice.rs  zone.rs
src-tauri/src/instruments/synth/: envelope.rs  filter.rs  lfo.rs  mod.rs  oscillator.rs  params.rs  voice.rs
src-tauri/src/midi/: commands.rs  export.rs  export_commands.rs  import.rs  import_commands.rs  manager.rs  mapping.rs  mod.rs  recording.rs  recording_commands.rs  types.rs
src-tauri/src/presets/: factory.rs  manager.rs  mod.rs  mod_types.rs
src-tauri/src/project/: arrangement.rs  arrangement_commands.rs  commands.rs  format.rs  io.rs  mod.rs  pattern.rs  pattern_commands.rs  recent.rs  track.rs  track_commands.rs  version.rs
src-tauri/src/sequencer/: clock.rs  commands.rs  mod.rs  step.rs  step_sequencer.rs
src-tauri/src/vst3/: com.rs  commands.rs  effect.rs  gui_bridge.rs  host.rs  instrument.rs  loader.rs  mod.rs  params.rs  preset_manager.rs  scanner.rs  state.rs
src/components/: ErrorBoundary.tsx
src/hooks/: useGlobalKeyboard.ts  useMidiLearn.ts  usePresets.ts  useUndoRedo.ts
src/lib/: history.ts  ipc.ts  midiImportUtils.ts  shortcuts.ts
src/stores/: arrangementStore.ts  audioStore.ts  authStore.ts  automationStore.test.ts  automationStore.ts  browserStore.ts  clipPlayerStore.ts  compressorStore.ts  delayStore.ts  drumMachineStore.ts  effectChainStore.ts  eqStore.ts  exportStore.ts  fadeStore.ts  fileStore.ts  freezeStore.ts  gateStore.ts  historyStore.ts  keyboardStore.ts  lfoStore.ts  limiterStore.ts  (+26 more)
(+499 files in other folders)
